fix dark mode

--- a/greatStack/styles.css
+++ b/greatStack/styles.css
@@ -101,6 +101,10 @@ button span {
     font-weight: 400;
 }
 
+#he {
+    color: #ffffff;
+}
+
 .text-container a {
     text-decoration: none;
     background: #63ec53;
